--- a/lms/static/sass/course/courseware/_courseware.scss
+++ b/lms/static/sass/course/courseware/_courseware.scss
@@ -100,7 +100,7 @@ div.course-wrapper {
 
   section.course-content {
     @extend .content;
-    padding: ($baseline*2);
+    padding: ($baseline*2) 3%;
     line-height: 1.6;
     h1 {
       margin: 0 0 lh();
